extension/content-scripts/content.css
.bot-interface-wrapper{
    transition: all ease-in-out 500ms;
}

.bot-button{
    background-color: black;
    color: gray;
    border: 1px solid gray;
    font-size: 12px;
    z-index: 999;
    padding: 5px 20px;
    transition: all ease-in-out 700ms;
    cursor: pointer;
}

.toggle-button{
    cursor: pointer;
}

.bot-interface-wrapper{
    position: absolute;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
    width: 50vw;
    z-index: 999;
    display: flex;
    justify-content: space-between;
}

.active-button{
    color: aqua;
    border: 1px solid aqua;
}

.range{
    position: absolute;
    top: 0;
    left: 0;
    pointer-events: none;
}

.small-range{
    background-color: rgba(255, 0, 0, .5);
    border: 1px solid rgb(255, 0, 0);
}

.big-range{
    background-color: rgba(65, 150, 235, .5);
    border: 1px solid rgb(65, 150, 235);
}

.hiddenFromBot{ 
    /* hiddenFromBot class it's helper class, bot get decisions on coordinates not this class */
    display: block !important;
    background-color: black !important;
    border: 2px solid red;
}

.hideOutsideRangeMobs{
    /* This class hide mobs which are outside from bot range */
    display: none;
}

.bot-range{
    background-color: rgba(153, 255, 189, .5);

    border: 3px solid transparent;
    border-image-outset: 0px;
    border-image-repeat: repeat;
    border-image-slice: 4;
    border-image-width: 1px;
    border-image-source: url("http://matthewjamestaylor.com/blog/selection-big.gif");
}

.off-pointer-events{
    pointer-events: none;
}

.minimap-opacity-slider{
}

